--- a/src/components/CompactShop.css
+++ b/src/components/CompactShop.css
@@ -1,25 +1,29 @@
 .card-img-top {
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 5% 0 5% 0;
-  
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5% 0 5% 0;
 }
 
 .text-button {
-    text-align: center;
-    border-radius: 20px; 
-    opacity: 0.8; 
-    background: #dadada;
-    display: inline;
-    padding: 0 10px 0 10px; 
+  text-align: center;
+  border-radius: 20px; 
+  opacity: 0.8; 
+  background: #dadada;
+  display: inline;
+  padding: 0 10px 0 10px; 
 }
-
 
 .shop-card {
   transition: transform 250ms;
+  text-align: center;
 }
 
 .shop-card:hover {
   transform: translateY(-10px);
+}
+
+.card {
+  border-radius: 20px;
+  
 }
