--- a/src/components/CompactGood.css
+++ b/src/components/CompactGood.css
@@ -12,7 +12,9 @@
 }
 
 .good-card {
-    margin-top: 40px;
+    position: relative;
+    padding: 20px 55px;
+    padding-bottom: 50px;
 }
 
 .good-download {
@@ -28,4 +30,15 @@
     text-align: center;
     font-size: 12px;
     line-height: 1.42857;
+}
+
+.changing-cart {
+    position: absolute;
+    bottom: 20px;
+    right: 55px;
+    left: 55px;
+}
+
+.add-cart {
+    cursor: pointer;
 }
