--- a/src/pages/Auth.css
+++ b/src/pages/Auth.css
@@ -9,25 +9,18 @@
     padding-top: 30px;
     
 }
-.form-control {
+
+.authform .form-control {
     margin-left: auto;
     margin-right: auto;
     width: 278px;
     border-radius: 8px;
 }
-.authform .btn {
-    width: 259px;
-    height: 46px;
-    background-color: #9378FF;
-    border-radius: 63px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
 
-}
 .authform h3, .authform .form-label, .authform .form-text{
     margin-left: 61px;
 }
+
 .authform .form-check{
     text-align: center;
     margin: 0 130px;
